# odbcpp98

./: .gitignore  CMakeLists.txt  README.md
build-scripts/: build-boost.bat  build.bat
odbcpp98/: odbcpp98.cpp  odbcpp98.h
tests/: CMakeLists.txt  odbcpp98-env-alloc-test.cpp
